change name title web

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "site": {
-    "title": "Free Mod Game 🚀",
+    "title": "MOD SKIN GAME MỚI 2023 | skinmodpro.com",
     "base_url": "/",
     "favicon": "/images/duck.png",
     "logo": "/images/ducklogo2.png",
