--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "site": {
-    "title": "MOD SKIN GAME MỚI 2023 | skinmodpro.com",
+    "title": "TẢI MOD SKIN LOL | MOD GAME MỚI NHẤT 2023 ",
     "base_url": "/",
     "favicon": "/images/duck.png",
     "logo": "/images/ducklogo2.png",
